# olx-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  olx_mcp_server.py  pyproject.toml  requirements.txt  server.py  test_mcp.py
.claude/context/: anti-bloqueio.md  arquitetura.md  operacao.md  release.md  seguranca.md  testes.md
.github/workflows/: release.yml
mcp_brazil_marketplaces/: server.py
olx_mcp/: server.py
tests/: test_unit.py
